# reagent

./: .env.example  CLAUDE.md  PITCH.md  README.md  SUBMISSION.md  pyproject.toml
agents/: coding.md  dynamic.md  orchestrator.md  static.md  triage.md
crackme/: .gitignore  Makefile
crackme/src/: crackme01_password.c  crackme02_xor.c  crackme03_keygen.c  crackme04_bof.c  crackme05_multistage.c  sys_base64.c  sys_cat.c  sys_echo.c  sys_true.c  sys_yes.c
skills/gdb/: commands.md  workflows.md
skills/lldb/: commands.md  workflows.md
skills/rizin/: commands.md  patterns.md
src/reagent/: __init__.py  cli.py
src/reagent/agent/: __init__.py  agent.py  loop.py  orchestrator.py  registry.py
src/reagent/config/: __init__.py
src/reagent/context/: __init__.py  management.py
src/reagent/llm/: __init__.py  message.py  provider.py  streaming.py
src/reagent/model/: __init__.py  binary.py  hypothesis.py
src/reagent/pty/: __init__.py  buffer.py  manager.py  session.py
src/reagent/re/: __init__.py  debugger.py  file_info.py  rizin.py
src/reagent/session/: __init__.py  wire.py
src/reagent/skill/: __init__.py
src/reagent/tool/: __init__.py  base.py  registry.py  truncation.py
src/reagent/tool/builtin/: __init__.py  dmail.py  read_file.py  shell.py  skill.py  task.py  think.py  write_file.py
src/reagent/tui/: __init__.py  app.py  bridge.py
tests/: test_buffer.py  test_context.py  test_debugger.py  test_file_info.py  test_message.py  test_model.py  test_provider.py  test_streaming.py  test_truncation.py  test_wire.py
